dashboards-ui/dashboardsui-web/public_html/scss/builder-alta.scss
/* ... */
.dbd-widget:not(.dbd-tile-edit-disabled):not(.ui-draggable-disabled) .dbd-tile-header {
  cursor: move;
}

.widget-area.dbd-support-transition .dbd-widget:not(.dbd-tile-in-dragging), 
.widget-area.dbd-support-transition .dbd-widget:not(.dbd-tile-in-dragging) .dbd-tile-element {
    -webkit-transition: top 0.5s,
                        left 0.5s,
                        width 0.5s,
                        height 0.5s,
                        font-size 0.5s,
                        line-height 0.5s;
}

.tile-dragging-placeholder {    
    -webkit-transition: top 0.5s, 
        left 0.5s, 
        width 0.5s,
        height 0.5s,
        font-size 0.5s,
        line-height 0.5s;
    
    display:none; 
    position: absolute; 
    background-color: #F0CAC4;
    border-bottom: 1px solid #F0CAC4;
    margin-left: 10px;
    margin-top: 10px;
    color: #F0CAC4;
}

.builder-dbd-name {
    font-size: 1.286rem;
    -webkit-margin-before: 0px;
    -webkit-margin-after: 0px;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    left: 20px;
    display: inline;
    width: 100%;
}

.dbd-tile-maximized .dbd-tile-header {
  cursor: default;
}

.dbd-pull-left {
  float: left!important;
}

.dbd-pull-right {
    float: right!important;
    button {
        margin-bottom: 0;
    }
}

.dbd-pull-middle {
  vertical-align: middle;
}

.dbd-screenshot-zoomout {
  width: 25%;
}

.dbd-btn-group {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  .dbd-tile-action{
      .oj-button-menu-dropdown-icon{
          display: none;
      }
      .oj-button-text{
          display: none;
      }
      .dbd-tile-icon-option{
          height: 30px;
          //hack default
          margin-left: 0.5rem !important;
          margin-top: -3px;
      }
  }
}

.dbd-widget[ismobile="false"] .dbd-btn-editor {
    display: none;
}

.dbd-widget[ismobile="false"] .dbd-btn-maxminToggle {
    display: none;
}

.dbd-widget[ismobile="false"] .dbd-btn-group {
    display: none;
}

.dbd-widget[ismobile="false"]:hover .dbd-btn-group {
    display: inline-block;
}

.dbd-tile-container {
    position: absolute; 
    top: 0; 
    left: 0px; 
    right: 0;
    bottom: 0px;
    margin: 5px;
    max-width:none;
    border: 1px solid #d6dfe6; 
    border-radius: 0;
    
    .dbd-tile-header{
        color: #333;
        background-color: #fff;
        padding: 1px 8px;
        height: 32px;
        font-size: 14px;
        /*
        border-left: 1px solid;
        border-right: 1px solid;
        border-bottom: 0px;
        border-radius: 0;
        margin-right: -2px;
        */
        .dbd-tile-action {
            float: right;
            display: block;
            margin-bottom: 1px;
            width: 20px;
            height: 32px;
            min-width: 36px;
            min-height: 32px;
            border-radius: 0;
        }

        h2.dbd-tile-title {
            height: 2.34rem;
            line-height: 2.34rem;
            font-weight: bold;
            padding-right: 23px;
            width: 100%;
            -moz-box-sizing: border-box;
            box-sizing: border-box;
            float:left;
            white-space:nowrap;
            overflow:hidden;
            text-overflow:ellipsis;
            font-size: 1.0em;
            -webkit-margin-before: 0em;
            -webkit-margin-after: 0em;
            -webkit-margin-start: 0px;
            -webkit-margin-end: 0px;
            margin: 0px;
            /* margin-right: -48px; */
            display: inline-block;
        }

        .dbd-btn-maxminToggle{
            button{
                float: right;
                display: block;
                width: 18px;
                height: 30px;
                min-width: 36px;
                min-height: 32px;
                border-radius: 0;
                margin-left: 2px;  
            }
            .dbd-title-edit{
                margin-top: -1px;
            }
            .oj-button-text{
                margin-left: -6px;
            }
        }
        .dbd-btn-editor{
            button{
                float: right;
                display: block;
                margin-bottom: 1px;
                width: 20px;
                height: 32px;
                min-width: 36px;
                min-height: 32px;
                border-radius: 0;
            }
            .dbd-title-edit{
                margin-left: 10px !important;
                margin-right: -5px !important;
                height:30px;
                &:before{
                    content:"\f08e"; 
                    height: 30px
                }
            }
        }
    }

    .dbd-tile-element {
        height:calc(100% - 34px);
        width:auto;
        overflow: auto;
        clear: right;
        background-color: white;
        border-radius: 0;
    }
    
    .dbd-resize-handler {
        color:#d6dfe6;
        position:absolute;
        z-index:91;
    }
    
    .dbd-resize-handler-right {
        width:6px;
        height:100%;
        right:-5px;
        top:0px;
        cursor:ew-resize;
    }
    
    .dbd-resize-handler-bottom{
        height: 6px;
        width:100%;
        left:0px;
        bottom: -5px;
        cursor:ns-resize;
    }
    
    .dbd-resize-handler-right-bottom {
        cursor:se-resize;
        right:1px;
        bottom:0px;
        > span {
            color:#878c90;
        }
    }
}

.dbd-one-page .dbd-tile-element {
  height: 100%;
  border: 0px;
  overflow: hidden;
}

.dbd-one-page {
  overflow: hidden;
  padding-right: 0;
  padding-left: 0;
}

.dbd-one-page iframe {
  border: 0px;
  overflow: hidden;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
}

.dbd-one-page iframe::-webkit-scrollbar { 
  width: 0 !important;
}

/*.dbd-tile-maximized .dbd-tile-element {
  margin-bottom: 5em;
}*/
/* ... */

